fix(material): cutoff and jog tables

--- a/src/app/Main.scss
+++ b/src/app/Main.scss
@@ -42,3 +42,11 @@ select {
 .tooltip {
   z-index: 11000 !important;
 }
+
+body > div[role='dialog'],
+body > div[role='dialog']:not(.modal) {
+  position: relative;
+  z-index: 10000;
+  height: 0;
+  overflow: visible;
+}
